<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.setiapp.Main2Activity">

    <TextView
        android:id="@+id/txtContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtViewCounter"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtContador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="0"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContador" />

    <Button
        android:id="@+id/botonRestar"
        android:layout_width="127dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:onClick="botonRestar"
        android:text="@string/botonRestar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContador2" />

    <Button
        android:id="@+id/botonSumar"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="16dp"
        android:onClick="botonSumar"
        android:text="@string/botonSumar"
        app:layout_constraintEnd_toStartOf="@+id/botonRestar"
        app:layout_constraintTop_toBottomOf="@+id/txtContador2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:onClick="botonVibrar"
        android:text="@string/botonVibrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonSumar" />

    <EditText
        android:id="@+id/txtMiliSegundosVibrar"
        android:layout_width="74dp"
        android:layout_height="46dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonRestar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="85dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtMilisegundosVibrar"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/txtMiliSegundosVibrar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/botonRestar" />

</android.support.constraint.ConstraintLayout>
